# DeferredDemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/D3DGame/: CMakeLists.txt
Source/D3DGame/Game/Private/: GameApplication.cpp  GameInstance.cpp  GameWindow.cpp  RenderDevice.cpp
Source/D3DGame/Game/Public/: D3DGame.h  GameApplication.h  GameInstance.h  GameWindow.h  LogMacros.h  RenderDevice.h
Source/Deferred/: CMakeLists.txt
Source/Deferred/Source/: Main.cpp
Source/GameFramework/: CMakeLists.txt
Source/GameFramework/Game/Private/: D3DHelper.h  DeviceD3D12.cpp  DeviceD3D12.h  DllMain.cpp  GameApplication.cpp  GameFrameworkPCH.h  GameInstance.cpp  MemoryTracking.cpp  RendererD3D12.cpp  RendererD3D12.h  Utility.cpp  WindowsGameWindow.cpp  WindowsGameWindow.h
Source/GameFramework/Game/Public/: AssertionMacros.h  GameApplication.h  GameFramework.h  GameInstance.h  IGameInstance.h  IGameWindow.h  IRenderDevice.h  IRenderer.h  Platform.h
Source/GameFramework/Platform/Windows/: WindowsApplication.cpp  WindowsApplication.h  WindowsPlatform.cpp  WindowsPlatform.h  WindowsWindow.cpp  WindowsWindow.h
Source/GameFramework/Renderer/Direct3D12/: D3DHelper.cpp  RendererD3D12.cpp  RendererD3D12.h
Source/GameFramework/stb/: StbModule.cpp  stb_log.h
